# supply-scan

./: Cargo.toml  README.md  SPEC.md
fixtures/npm-clean/: package.json
fixtures/npm-risky/: package.json
fixtures/pypi-clean/: requirements.txt
fixtures/pypi-risky/: requirements.txt
src/: main.rs  popular.rs  report.rs  scanner.rs
src/checks/: existence.rs  mod.rs  signals.rs  typosquat.rs  vulnerability.rs
src/parsers/: mod.rs  npm.rs  pypi.rs
src/registry/: mod.rs  npm.rs  osv.rs  pypi.rs
tests/: integration.rs
