[package]
name = "supply-scan"
version = "0.1.0"
edition = "2021"
description = "Scan project dependencies for malicious, typosquatted, and AI-hallucinated packages"
license = "MIT"
repository = "https://github.com/jtsilverman/supply-scan"
keywords = ["security", "supply-chain", "typosquatting", "dependencies", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
colored = "3"
strsim = "0.11"
toml = "0.8"
